// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroSection > renders default as expected 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    />
  </div>
</div>
`;

exports[`HeroSection > renders with buttons 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    >
      <h1
        class="bluedot-h1 text-white text-center text-size-2xl lg:text-size-3xl xl:text-size-4xl leading-tight font-normal tracking-tighter"
      >
        This is the title
      </h1>
      <div
        class="flex justify-center mt-8"
      >
        <a
          class="not-prose flex w-fit cursor-pointer items-center justify-center gap-2 whitespace-nowrap rounded-surface text-size-xs font-semibold transition-all duration-200 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-focus on-dark:focus-visible:outline-focus-on-dark disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-busy:pointer-events-none aria-busy:opacity-50 h-11 px-4 bg-accent text-on-dark hover:bg-accent-hover on-dark:bg-accent-on-dark on-dark:text-bluedot-darker on-dark:hover:bg-accent-on-dark-hover"
          href="https://example.com"
          tabindex="0"
        >
          Do a thing
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with optional yield 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with titles 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    >
      <h1
        class="bluedot-h1 text-white text-center text-size-2xl lg:text-size-3xl xl:text-size-4xl leading-tight font-normal tracking-tighter"
      >
        This is the title
      </h1>
    </div>
  </div>
</div>
`;
